crates/buff-lang-codegen-wgsl/tests/snapshots/wgsl_codegen_tests__wgsl_full_shader_x_times_two.snap
---
source: crates/buff-lang-codegen-wgsl/tests/wgsl_codegen_tests.rs
assertion_line: 168
expression: src
---
// Auto-generated by buff-lang-codegen-wgsl. DO NOT EDIT.
// Map kernel body lowered from a Buff `{ param => <expr> }` lambda.
//
// Element type: f32 (Rust: f32)
// Workgroup size: 64
// Bindings: @group(0) @binding(0)=input(read), @binding(1)=output(read_write)

@group(0) @binding(0) var<storage, read> input: array<f32>;
@group(0) @binding(1) var<storage, read_write> output: array<f32>;

@compute @workgroup_size(64)
fn main(@builtin(global_invocation_id) gid: vec3<u32>) {
    let i = gid.x;
    if (i >= arrayLength(&input)) {
        return;
    }
    let x = input[i];
    output[i] = x * 2.0;
}
